--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "cpns/*":["src/components/*"]
     },
     "lib": [
       "esnext",
